# scrapy-test

./: .gitignore  README.md  nd-bills.py  pyproject.toml
core/scrape/: __init__.py  base.py  bill.py  jurisdiction.py
core/utils/: __init__.py  generic.py  instrument.py
core/utils/people/: general.py  merge.py  retire.py
scrapers/: exporters.py  settings.py
scrapers/items/: __init__.py  bills.py
scrapers/middleware/: __init__.py  downloader_scout_only.py
scrapers/ndlegis-scrappy/ndlegis/: scrapy.cfg
scrapers/ndlegis-scrappy/ndlegis/ndlegis/: items.py  middlewares.py  pipelines.py  settings.py
scrapers/ndlegis-scrappy/ndlegis/ndlegis/spiders/: nd-bills.py
scrapers/pipelines/: __init__.py  drop_stubs.py  save_google_cloud_storage.py  save_local.py  utils.py
scrapers/scrapers/: exporters.py  settings.py
scrapers/scrapers/items/: __init__.py  bills.py
scrapers/scrapers/pipelines/: __init__.py  save_objects.py
scrapers/scrapers/spiders/: consts.py  exceptions.py  mo-bills.py  nv-bills.py  utils.py
scrapers/scrapers/utils/: serialize.py
scrapers/scripts/: compare_scrapy_to_os_update.py
scrapers/spiders/: __init__.py  nv-bills.py
scrapers/spiders/us/mo/: bills.py  state.py
scrapers/spiders/us/nv/: bills.py  state.py
scrapers/utils/: __init__.py  common.py  exceptions.py
