[tool.poetry]
name = "scrapy-test"
version = "0.1.0"
description = ""
authors = ["Jesse Mortenson <jesse@pluralpolicy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.11.0"
boto3 = "^1.28.78"
jsonschema = "^4.19.2"
scrapelib = "^2.2.0"
pytz = "^2023.3.post1"
deepdiff = "^6.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
